Freedom Sanbox Ant Deploy/src/objects/HLVDetails__c.object
<CustomObject>
    <description>Its an intermediate object.This object will contain values which are generated in HLV calculation.
So while plan generation we can fetch these values to display on it</description>
    <fields>
        <fullName>Additional_Life_Insurance_Required__c</fullName>
        <label>Additional Life Insurance Required</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Factor_Increase_or_Decreas__c</fullName>
        <label>Adjustment Factor % (Increase or Decreas</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Continuing_Income_Sources_Details__c</fullName>
        <label>Continuing Income Sources Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Continuing_Income_Sources_Present_Value__c</fullName>
        <label>Continuing Income Sources Present Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEPENDENT_NEEDS_Present_Values__c</fullName>
        <label>DEPENDENT NEEDS Present Values</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependent_Entity_Name__c</fullName>
        <label>Dependent Entity Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Investments_Details__c</fullName>
        <label>Existing Investments Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Investments_Total__c</fullName>
        <label>Existing Investments Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Life_Insurance_Present_Value__c</fullName>
        <label>Existing Life Insurance Present Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inflation_Adjusted_Return__c</fullName>
        <label>Expected Inflation Adjusted Return</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Inflation__c</fullName>
        <label>Expected Inflation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Return_on_Investments__c</fullName>
        <label>Expected Return on Investments</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOALS_TO_BE_MET_Total__c</fullName>
        <label>GOALS TO BE MET Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROSS_LIFE_INSURANCE_REQUIRED__c</fullName>
        <label>GROSS LIFE INSURANCE REQUIRED</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoalDetails__c</fullName>
        <label>GoalDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Liabilities__c</fullName>
        <label>Liabilities</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Living_Years_B_A__c</fullName>
        <label>Living Years (B-A)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Normal_Age_of_Retirement_B__c</fullName>
        <description>Normal Age of Retirement (B) of Selected Entity</description>
        <label>Normal Age of Retirement (B)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Normal_Life_Expectancy_B__c</fullName>
        <label>Normal Life Expectancy (B)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONE_TIME_FINAL_COSTS_Present_Value__c</fullName>
        <label>ONE TIME FINAL COSTS Present Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Amount_Rs__c</fullName>
        <label>Premium Amount (Rs.)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Present_Age_in_case_of_Death_A_Dependent__c</fullName>
        <label>Present Age in case of Death (A)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Present_Age_in_case_of_Death_A__c</fullName>
        <description>Present Age in case of Death (A) of selected Entity</description>
        <label>Present Age in case of Death (A)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RichText_Remark__c</fullName>
        <label>RichText Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Round_Off__c</fullName>
        <label>Round Off</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Entity_Name__c</fullName>
        <label>Selected Entity Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_of_Insurance__c</fullName>
        <label>Term of Insurance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Living_Expenses_Of_Dependant__c</fullName>
        <label>Total Living Expenses Of Dependant</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Life_B_A__c</fullName>
        <label>Working Life (B-A)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_Household_Inevitable_Expenses__c</fullName>
        <label>Yearly Household Inevitable Expenses</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>entity__c</fullName>
        <label>entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HLVDetails</relationshipLabel>
        <relationshipName>HLVDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>HLVDetail</label>
    <nameField>
        <label>HlvDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HLVDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>